--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,6 @@
+/* 元々のCSSには「import」はない機能だが、「package.json」に記載のpostcssによりこのファイルからimposerできるようになっている */
+/* tailwindをインストール時に一緒に読み込まれている */
+@import 'micromodal' ;
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
